--- a/styles.css
+++ b/styles.css
@@ -68,9 +68,9 @@ header {
   line-height: 1.5;
 }
 header .profile-image {
-  margin-top: 65px;
-  width: 150px;
-  height: 150px;
+  margin-top: 50px;
+  width: 200px;
+  height: 200px;
   border-radius: 10%;
   border: 3px solid white;
   transition: all .5s;
@@ -86,6 +86,9 @@ header .profile-image:hover {
   display: table;
   margin: 10px auto;
 } 
+.tag:hover {
+  transform: scale(1.2) 
+}
 .tag-name1 {
 
   background-color:#e3f1fc;
@@ -95,9 +98,16 @@ header .profile-image:hover {
   display: table;
   margin: 150px auto;
 }
+.tag-name1:hover {
+  transform: scale(1.2) 
+}
 .location {
   background-color: #e3f1fc;
   color:  black;
+  
+}
+.location:hover {
+  transform: scale(1.2) 
 }
 .card {
   margin: 30px;
@@ -125,6 +135,9 @@ ul.skills {
   color: white;
   padding: 5px 10px;
   margin: 2px;
+}
+.skills:hover {
+  transform: scale(1.3) 
 }
 h2 {
   border: solid black 3px;
@@ -168,11 +181,20 @@ a.social {
 a.twitter {
   background-image: url(images/twitter.svg);
 }
+a.twitter:hover {
+  transform: scale(1.8) 
+}
 a.linkedin {
   background-image: url(images/linkedin.svg);
 }
+a.linkedin:hover {
+  transform: scale(1.8)
+}
 a.github {
   background-image: url(images/github.svg);
+}
+a.github:hover {
+  transform: scale(1.8)
 }
 a.social:hover {
   opacity: 1;
